@@ -23,6 +23,7 @@ Features:
  - Support loading 7-Zip files
  - Drag and drop game loading
  - Cheat code support
+ - Debugger: Add CLI functions for examining memory regions
 Bugfixes:
  - ARM7: Extend prefetch by one stage
  - GBA Audio: Support 16-bit writes to FIFO audio
